--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -5,7 +5,7 @@ This is coded with color name</font></p>
 <p><font color="#FFD700" face="Arieal" Size="6"> 
 This is coded with a Hex Sign</font></p>
 <p><b>This is Bold</b><i> This is itz.</i><u> This is underline</u></p>
-<p><img src="C:\Users\coffe\OneDrive\Documents\GitHub\Basic_HTML_and_JavaScript_1\Pictures\Sup_emote.png" alt="Badmanydoc Sup Emote" width="500" height="600"></p>
+<p><img src="Pictures\Sup_emote.png" alt="Badmanydoc Sup Emote" width="500" height="600"></p>
 </html>
 
 
